# QuantumComputing

./: .gitignore  appunti.ipynb  plot_tensor_ring.py  pyproject.toml  qcGrover_CNF.ipynb  qcGrover_generic_withMCZ.ipynb  qcLab_arithmetic.ipynb  qcSimon.ipynb  risultati_finali.csv  risultati_finali_reupload.csv
esame/: DataUtils.py  DataUtilsTraffic.py  QGRU.py  QLSTM.py  QLSTMTensorRing.py  Untitled-1.py  analyze_expressivity.py  ansatzQISKIT.py  classicArchitecture.py  esame.ipynb  experiment.py  experimentTraffic.py  experiment_results.csv  expressivity.py  hybridArchitecture.py  risultati_finali_reupload.csv  tensorRing.py
esame/models_100epochs/: experiment_10_ws16.pth  experiment_10_ws4.pth  experiment_11_ws16.pth  experiment_11_ws4.pth  experiment_12_ws16.pth  experiment_12_ws4.pth  experiment_13_ws16.pth  experiment_13_ws4.pth  experiment_14_ws16.pth  experiment_14_ws4.pth  experiment_1_ws16.pth  experiment_1_ws4.pth  experiment_2_ws16.pth  experiment_2_ws4.pth  experiment_3_ws16.pth  experiment_3_ws4.pth  experiment_4_ws16.pth  experiment_4_ws4.pth  experiment_5_ws16.pth  experiment_5_ws4.pth  experiment_6_ws16.pth  experiment_6_ws4.pth  experiment_7_ws16.pth  experiment_7_ws4.pth  experiment_8_ws16.pth  experiment_8_ws4.pth  experiment_9_ws16.pth  experiment_9_ws4.pth  experiment_classic_1_ws16.pth  experiment_classic_1_ws4.pth  experiment_classic_2_ws16.pth  experiment_classic_2_ws4.pth
ex/: QML_exercise.ipynb  ex1.py  pyproject.toml  qcBB84.ipynb  qcLab1.ipynb  qcLabTeleportation.ipynb  qcLab_arithmetic.ipynb
(+48 files in other folders)
