[project]
name = "quantumcomputing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "qiskit[visualization]>=2.2.3",
    "qiskit-ibm-runtime>=0.43.1",
    "qiskit-aer>=0.17.2",
    "pylatexenc>=2.10",
    "pennylane>=0.43.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.66.0",
    "pennylane-lightning>=0.43.0",
    "ucimlrepo>=0.0.7",
]
